<resources>
    <string name="app_name">PlayerDemo</string>

    <string name="empty_message">没有数据\n点击屏幕重试</string>
    <string name="load_failed">加载失败\n点击屏幕重试</string>
    <string name="net_error_message">网络错误\n点击屏幕重试</string>
    <string name="loading_message">正在加载中…</string>
    <string name="no_more_string">-The End-</string>

    <string name="error_request_service">请求服务器异常</string>
    <string name="error_request_network">网络异常，请检查网络连接是否畅通</string>
    <string name="error_file_null">文件不能为空</string>
    <string name="error_file_path_null">文件路径不能为空</string>

    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码</string>
    <string name="forget_">忘记密码？</string>
    <string name="complete">完成</string>
    <string name="reset_password">重置密码</string>
    <string name="feedback">意见反馈</string>
    <string name="submit">提交</string>
    <string name="about_us">关于我们</string>
    <string name="share">分享</string>
    <string name="set">设置</string>
    <string name="exit_account">退出当前账户</string>
    <string name="message">消息</string>
    <string name="home">首页</string>
    <string name="polling">巡检</string>
    <string name="professional">专业</string>
    <string name="professional_model">专业模式</string>
    <string name="next_step">下一步</string>
    <string name="get_verify">获取验证码</string>
    <string name="exit_again">再按一次退出</string>
    <string name="mine">我的</string>
    <string name="password">密码</string>
    <string name="no_read_message">未读消息%d条</string>
    <string name="number_unit">条</string>
    <string name="normal">正常</string>
    <string name="tips_sure_exit">确定要退出当前账户吗？</string>
    <string name="tips_clear_success">清理完毕！</string>
    <string name="people_info">个人信息</string>
    <string name="avatar">头像</string>
    <string name="clear">清理缓存</string>
    <string name="name">姓名</string>
    <string name="manage">管理</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="tips_get_success">获取成功</string>
    <string name="tips_get_failed">获取失败</string>
    <string name="get_code_time">%ds后重新获取</string>
    <string name="tips_verify_success">验证成功</string>
    <string name="tips_verify_failed">验证失败</string>
    <string name="tips_register_success">注册成功</string>
    <string name="tips_register_failed">注册失败</string>
    <string name="tips_input_password">输入密码</string>
    <string name="tips_password_length_error">密码不能少于6位</string>
    <string name="tips_please_input_phone">请输入您的手机号</string>
    <string name="tips_please_input_company_code">请输入您的企业码</string>
    <string name="tips_please_input_feedback_content">请输入反馈内容</string>
    <string name="tips_please_select">请选择部门</string>
    <string name="tips_please_input_short_sms">请输入您的短信验证码</string>
    <string name="tips_please_input_password">请输入您的密码</string>
    <string name="tips_please_set_password">请设置您的密码</string>
    <string name="tips_please_set_password_again">请再次设置您的密码</string>
    <string name="tips_please_input_name">请输入您的名字</string>
    <string name="hint_please_input_account">请输入您的账号</string>
    <string name="hint_please_input_feed">请编写您的建议</string>
    <string name="hint_please_get_code">请先获取验证码</string>
    <string name="tips_submit_success">提交成功</string>
    <string name="tips_submit_failed">提交失败</string>
    <string name="tips_success_login">登录成功</string>
    <string name="test_name" />
    <string name="test_number" />
    <string name="test_message_title" />
    <string name="test_date" />
    <string name="test_pro_text1" />
    <string name="test_pro_text"> </string>
    <string name="test_pro_text2" />
    <string name="test_pro_name" />
    <string name="test_pro_value" />
    <string name="test_title" />
    <string name="test_message_detail_title" />
    <string name="test_device_name" />
    <string name="test_polling_title" />
    <string name="test_company_project" />
    <string name="test_company_name" />
    <string name="test_grade" />
    <string name="test_message_content" />
    <string name="test_level" />
    <string name="test_day" />
    <string name="test_manager_project" />

    <string name="device_polling">设备巡检 状态上报</string>
    <string name="goto_polling">进入巡检</string>
    <string name="polling_record">巡检记录</string>
    <string name="report_fix">报修</string>
    <string name="message_detail">消息详情</string>
    <string name="str_look_detail" translatable="false">查看详情</string>
    <string name="company_info">单位信息</string>
    <string name="mine_grade">综合评分</string>
    <string name="mine_safety">安全运行天数</string>
    <string name="mine_data">实时采集数据</string>
    <string name="modify_password">修改密码</string>
    <string name="check_upgrade">检查更新</string>
    <string name="contacts_service">联系客服</string>
    <string name="fire_control">消防</string>
    <string name="fire_control_device">消防设施</string>
    <string name="select_level">选择部门</string>
    <string name="album">相册</string>
    <string name="take">拍照</string>
    <string name="tips_modify_success">修改成功</string>
    <string name="tips_modify_failed">修改失败</string>
    <string name="modify_name">修改名字</string>
    <string name="save">保存</string>
    <string name="error_open_camera">打开相机出错</string>
    <string name="design_pa">设计压力：</string>
    <string name="actual_pa">实测压力：</string>
    <string name="company_manager">消防安全管理人：</string>
    <string name="company_responsibility">消防安全责任人：</string>
    <string name="company_max_floor">最高楼层：</string>
    <string name="company_max_height">最高高度：</string>
    <string name="company_goods_number">放货分区数：</string>
    <string name="company_area">建筑总面积：</string>
    <string name="company_numbers">单体建筑个数：</string>
    <string name="company_use">使用性质：</string>
    <string name="company_place">属于什么场所：</string>
    <string name="company_category">建筑类别：</string>
    <string name="company_fix_year">设施改造年代：</string>
    <string name="company_build_year">建造年代：</string>
    <string name="company_name">单位名称：</string>
    <string name="last_start_mode">上次启动模式：</string>
    <string name="last_start">上次启动：</string>
    <string name="last_start_time">上次启动时间：</string>
    <string name="last_runtime">上次运行时长：</string>
    <string name="power_v">电源电压：</string>
    <string name="next_runtime">距下次运行时间：</string>
    <string name="device_runtime">设备运行周期：</string>
    <string name="power_status">电源状态：</string>
    <string name="title_activity_mine_address_list">MineAddressListActivity</string>
    <string name="str_address_list">地址列表</string>
    <string name="str_shipping_address" translatable="false">收货地址</string>
    <string name="str_add_new_address" translatable="false">添加地址</string>
    <string name="str_consignee" translatable="false">收货人</string>
    <string name="tips_please_consignee_name" translatable="false">请填写收货人的姓名</string>
    <string name="tips_please_consignee_phone" translatable="false">请填写联系人电话</string>
    <string name="str_region" translatable="false">地区</string>
    <string name="str_address" translatable="false">地址</string>
    <string name="tops_please_detailed_address" translatable="false">请填写您的详细地址</string>
    <string name="tops_select_address_city" translatable="false">请选择地区</string>
    <string name="str_default_address" translatable="false">设为默认地址</string>
    <string name="str_save" translatable="false">保存</string>
    <string name="str_delete" translatable="false">删除</string>
    <string name="str_compile" translatable="false">编辑</string>
    <string name="str_default_address_now" translatable="false">默认地址</string>
    <string name="str_success_delete_address" translatable="false">删除成功</string>
    <string name="str_success_default_address" translatable="false">设置默认成功</string>
    <string name="str_success_save__address" translatable="false">保存成功</string>
    <string name="addres_no_delete" translatable="false">默认地址不能删除</string>



</resources>
