<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".mine.setUp.SetUpActivity"
    >

  <RelativeLayout style="@style/top_bar_layout">

    <ImageButton
        android:onClick="back"
        android:src="@drawable/drw_button_back"
        tools:ignore="OnClick"
        style="@style/top_bar_btn_left"
        />

    <TextView
        android:text="@string/set"
        style="@style/top_bar_title"
        />

    <View style="@style/line_horizontal.title"/>

  </RelativeLayout>

  <TextView
      android:id="@+id/btnFeedback"
      android:layout_marginTop="10dp"
      android:text="@string/feedback"
      style="@style/mine_set_item_style"
      />

  <TextView
      android:id="@+id/btnAbout"
      android:text="@string/about_us"
      style="@style/mine_set_item_style"
      />

  <TextView
      android:id="@+id/btnClear"
      android:text="@string/clear"
      style="@style/mine_set_item_style"
      />

  <TextView
      android:id="@+id/btnUpgrade"
      android:text="@string/check_upgrade"
      style="@style/mine_set_item_style"
      />

  <TextView
      android:id="@+id/btnContacts"
      android:text="@string/contacts_service"
      style="@style/mine_set_item_style"
      />

  <Button
      android:id="@+id/btnExit"
      android:layout_width="match_parent"
      android:layout_height="@dimen/button_height"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="30dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/shape_button_exit"
      android:text="@string/exit_account"
      android:textColor="@android:color/white"
      android:textSize="@dimen/button_font_size"
      />

</LinearLayout>
