<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".mine.fragment.MineFragment"
    >

  <RelativeLayout style="@style/top_bar_layout.immerse">
    <TextView
        android:text="@string/mine"
        style="@style/top_bar_title"
        />
    <View style="@style/line_horizontal.title"/>

  </RelativeLayout>
  <RelativeLayout
      android:id="@+id/btnPeopleInfo"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:background="@android:color/white"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      >
    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@id/ivAvatar"
        android:layout_toRightOf="@id/ivAvatar"
        android:text="@string/test_name"
        android:textColor="@color/font_color_black26"
        android:textSize="@dimen/font_size_16"
        />
    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvName"
        android:layout_alignStart="@id/tvName"
        android:layout_below="@id/tvName"
        android:layout_marginTop="5dp"
        android:text="@string/test_level"
        android:textColor="@color/font_color_black53"
        android:textSize="@dimen/font_size_12"
        />
    <TextView
        android:id="@+id/tvExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="38dp"
        android:layout_toLeftOf="@id/arrow_right"
        android:layout_toStartOf="@id/arrow_right"
        android:background="@mipmap/mine_btn_export"
        />
    <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/right"
        />
  </RelativeLayout>
  <TextView
      android:id="@+id/btnInfo"
      android:layout_marginTop="10dp"
      android:drawableLeft="@mipmap/mine_list_icon_info"
      android:drawableStart="@mipmap/mine_list_icon_info"
      android:text="@string/company_info"
      style="@style/mine_item_style"
      />
  <TextView
      android:id="@+id/btnGrade"
      android:drawableLeft="@mipmap/minx_list_icon_grade"
      android:drawableStart="@mipmap/minx_list_icon_grade"
      android:text="@string/mine_grade"
      style="@style/mine_item_style"
      />
  <LinearLayout
      android:id="@+id/btnDay"
      android:layout_width="match_parent"
      android:layout_height="@dimen/item_height"
      android:background="@drawable/layer_mine_line"
      android:orientation="horizontal"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      >
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:drawableEnd="@null"
        android:drawableLeft="@mipmap/mine_list_icon_day"
        android:drawableRight="@null"
        android:drawableStart="@mipmap/mine_list_icon_day"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/mine_safety"
        style="@style/mine_item_style"
        />
    <TextView
        android:id="@+id/tvRuntime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/right"
        android:drawablePadding="10dp"
        android:drawableRight="@mipmap/right"
        android:textColor="@color/font_color_black53"
        android:textSize="@dimen/font_size_13"
        />
  </LinearLayout>

  <TextView
      android:id="@+id/btnData"
      android:drawableLeft="@mipmap/mine_list_icon_data"
      android:drawableStart="@mipmap/mine_list_icon_data"
      android:text="@string/mine_data"
      style="@style/mine_item_style"
      />
  <TextView
      android:id="@+id/btnSet"
      android:layout_marginTop="10dp"
      android:drawableLeft="@mipmap/mine_list_icon_set"
      android:drawableStart="@mipmap/mine_list_icon_set"
      android:text="@string/set"
      style="@style/mine_item_style"
      />
</LinearLayout>
