<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@mipmap/ic_launcher" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/account"
            android:textColor="@color/font_color_blackCC"
            android:textSize="@dimen/font_size_14" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:background="@null"
            android:hint="@string/tips_please_input_phone"
            android:inputType="phone"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="15098725394"
            android:textColor="@color/font_color_black87"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>

    <View
        style="@style/line_horizontal"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/password"
            android:textColor="@color/font_color_blackCC"
            android:textSize="@dimen/font_size_14" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tips_please_input_password"
            android:inputType="textPassword"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="123456"
            android:textColor="@color/font_color_black87"
            android:textSize="@dimen/font_size_14" />

        <CheckBox
            android:id="@+id/cbPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@drawable/drw_password_eye" />
    </LinearLayout>

    <View
        style="@style/line_horizontal"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp" />

    <TextView
        android:id="@+id/button_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/forget_"
        android:textColor="@color/font_color_blackCC"
        android:textSize="@dimen/font_size_14" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_font_size" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_button_edge"
        android:text="@string/register"
        android:textColor="@color/button_color_text_red"
        android:textSize="@dimen/button_font_size" />
</LinearLayout>
