<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".register.Register1Activity">

    <RelativeLayout style="@style/top_bar_layout">

        <ImageButton
            style="@style/top_bar_btn_left"
            android:onClick="back"
            android:src="@drawable/drw_button_back"
            tools:ignore="OnClick" />

        <TextView
            style="@style/top_bar_title"
            android:text="@string/register" />

        <View style="@style/line_horizontal.title" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tips_please_input_phone"
            android:inputType="phone"
            android:paddingLeft="5dp"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:paddingBottom="8dp"
            android:textColor="@color/font_color_black87"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/get_verify"
            android:textColor="@color/get_verify_text_color_set"
            android:textSize="@dimen/font_size_12" />
    </LinearLayout>

    <View
        style="@style/line_horizontal"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp" />

    <EditText
        android:id="@+id/etCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="@string/tips_please_input_short_sms"
        android:inputType="phone"
        android:paddingLeft="50dp"
        android:paddingTop="8dp"
        android:paddingRight="50dp"
        android:paddingBottom="8dp"
        android:textColor="@color/font_color_black87"
        android:textSize="@dimen/font_size_14" />

    <View
        style="@style/line_horizontal"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_button"
        android:text="@string/next_step"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_font_size" />

</LinearLayout>
