<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".mine.info.MineInfoActivity">

    <RelativeLayout style="@style/top_bar_layout">

        <ImageButton
            style="@style/top_bar_btn_left"
            android:onClick="back"
            android:src="@drawable/drw_button_back"
            tools:ignore="OnClick" />

        <TextView
            style="@style/top_bar_title"
            android:text="@string/people_info" />

        <View style="@style/line_horizontal.title" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btnPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/avatar"
            android:textColor="@color/font_color_black33"
            android:textSize="@dimen/font_size_14" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/tab_icon_mine_default" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvModifyName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/layer_info_line"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/font_color_black33"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/right"
            android:drawableRight="@mipmap/right"
            android:drawablePadding="10dp"
            android:text="@string/test_name"
            android:textColor="@color/font_color_black53"
            android:textSize="@dimen/font_size_13" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvModifyPsw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/layer_info_line"
        android:drawableEnd="@mipmap/right"
        android:drawableRight="@mipmap/right"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/modify_password"
        android:textColor="@color/font_color_black33"
        android:textSize="@dimen/font_size_14" />
</LinearLayout>
