<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".forget.ResetActivity">

    <RelativeLayout style="@style/top_bar_layout">

        <ImageButton
            style="@style/top_bar_btn_left"
            android:onClick="back"
            android:src="@drawable/drw_button_back"
            tools:ignore="OnClick" />

        <TextView
            style="@style/top_bar_title"
            android:text="@string/reset_password" />

        <View style="@style/line_horizontal.title" />

    </RelativeLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tips_please_set_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/font_color_black87"
            android:textSize="@dimen/font_size_14" />

        <CheckBox
            android:id="@+id/cbPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@drawable/drw_password_eye" />
    </LinearLayout>

    <View
        style="@style/line_horizontal"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp" />

    <Button
        android:id="@+id/btnComplete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_button"
        android:text="@string/complete"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_font_size" />
</LinearLayout>
